Bug 128229 - EDITING Protected change tracking setting not respected by Accept/Reject all commands
Summary: EDITING Protected change tracking setting not respected by Accept/Reject all ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2019-10-18 11:51 UTC by NISZ LibreOffice Team
Modified: 2019-10-22 14:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer with CT password set (16.60 KB, application/vnd.oasis.opendocument.text)
2019-10-18 11:51 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer (62.99 KB, image/png)
2019-10-18 11:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-10-18 11:51:11 UTC
Created attachment 155115 [details]
Example file from Writer with CT password set

When a change tracked document is protected with the change tracking password, it is not possible to use the Accept or Reject commands in the Edit – Change Tracking menu or the Manage Changes window. However it is possible to use the Accept All / Reject All commands, which ignores the password protection.


Steps to reproduce:
1.	Open attached document. It contains some tracked additions and deletions, protected by a password.
2.	Open the Edit – Track Changes menu

Actual results:
The Accept All and Reject All commands are usable, unlike Accept and Reject.

Expected results:
Accept All and Reject All should be disabled.

LibreOffice details:
Version: 6.4.0.0.alpha1+ (x86)
Build ID: f0340d58cc0f2808ce8003099ff2a0495360f267
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Also happens in:
Verzió: 6.0.0.3
Build az.: 64a0f66915f38c6217de274f0aa8e15618924765
CPU szálak: 4; OS: Windows 6.3; Felületmegjelenítés: alapértelmezett; 
Területi beállítások: hu-HU (hu_HU); Calc: CL

These commands were not present in earlier versions.
Comment 1 NISZ LibreOffice Team 2019-10-18 11:51:33 UTC
Created attachment 155116 [details]
Screenshot of the problem in Writer
Comment 2 Commit Notification 2019-10-22 12:45:36 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6fa378951a1b4e44b83622db73e0d1fdc6dbb5c

tdf#128229 Disable Accept All & Reject All if redlines are password protected

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.