tdf#128229 Disable Accept All & Reject All if redlines are password protected

Change-Id: If0a2781565b41aff1b502c293f89e2005b47cce8